--- a/strand/iOS/Strand/Strand/DFCreateStrandTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFCreateStrandTableViewCell.xib
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="0QE-dX-JkT" customClass="DFCreateStrandTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="183"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="158" id="0QE-dX-JkT" customClass="DFCreateStrandTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="159"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0QE-dX-JkT" id="9Js-NU-CqU">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="191"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="KC9-o9-x02">
-                        <rect key="frame" x="0.0" y="78" width="320" height="104"/>
+                        <rect key="frame" x="0.0" y="54" width="320" height="104"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="104" id="SdA-fJ-kZt"/>
@@ -27,41 +28,26 @@
                         </collectionViewFlowLayout>
                         <cells/>
                     </collectionView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Actor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLK-2v-mHU">
-                        <rect key="frame" x="8" y="10" width="36" height="17"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="invited you to a Strand" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="adG-vZ-Sef">
-                        <rect key="frame" x="47" y="10" width="146" height="17"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7rK-fT-t9G" userLabel="Disclosure Wrapper">
-                        <rect key="frame" x="260" y="0.0" width="60" height="78"/>
+                        <rect key="frame" x="256" y="0.0" width="64" height="54"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/CollectionTableViewCellDisclosure.png" translatesAutoresizingMaskIntoConstraints="NO" id="b4X-bq-qoX">
-                                <rect key="frame" x="37" y="32" width="15" height="15"/>
+                                <rect key="frame" x="41" y="19" width="15" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="Q3D-PD-MeR"/>
                                     <constraint firstAttribute="width" constant="15" id="ak1-8z-bDB"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Share" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bas-BI-p7l">
-                                <rect key="frame" x="0.0" y="32" width="35" height="15"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="35" id="iyD-fc-JOk"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="1" y="18" width="38" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.098039224743843079" green="0.58039218187332153" blue="0.9803922176361084" alpha="1" colorSpace="deviceRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="60" id="ABd-pX-wwf"/>
+                            <constraint firstAttribute="width" constant="64" id="ABd-pX-wwf"/>
                             <constraint firstItem="b4X-bq-qoX" firstAttribute="centerY" secondItem="bas-BI-p7l" secondAttribute="centerY" id="L6e-bB-wxR"/>
                             <constraint firstAttribute="trailing" secondItem="b4X-bq-qoX" secondAttribute="trailing" constant="8" id="e5I-69-Bz3"/>
                             <constraint firstAttribute="centerY" secondItem="b4X-bq-qoX" secondAttribute="centerY" id="gAh-1L-nGH"/>
@@ -69,7 +55,7 @@
                         </constraints>
                     </view>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ry2-wJ-FfO" userLabel="Info Wrapper">
-                        <rect key="frame" x="8" y="35" width="250" height="33"/>
+                        <rect key="frame" x="8" y="11" width="246" height="33"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="900" text="Actor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NPB-S6-YvY">
                                 <rect key="frame" x="0.0" y="0.0" width="36" height="17"/>
@@ -77,7 +63,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sep 30 2014 in Williamsburg, Brooklyn" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJw-rI-6rQ">
-                                <rect key="frame" x="0.0" y="18" width="250" height="15"/>
+                                <rect key="frame" x="0.0" y="18" width="246" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="15" id="inu-B3-OJ5"/>
                                 </constraints>
@@ -86,9 +72,8 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="might want these" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Us-ce-ejk">
-                                <rect key="frame" x="40" y="0.0" width="210" height="17"/>
+                                <rect key="frame" x="40" y="0.0" width="206" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -111,18 +96,13 @@
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="aLK-2v-mHU" firstAttribute="leading" secondItem="9Js-NU-CqU" secondAttribute="leading" constant="8" id="3TL-jg-HXg"/>
                     <constraint firstAttribute="trailing" secondItem="KC9-o9-x02" secondAttribute="trailing" id="BKh-vk-UA2"/>
                     <constraint firstAttribute="bottom" secondItem="KC9-o9-x02" secondAttribute="bottom" id="JNR-DO-of6"/>
                     <constraint firstItem="KC9-o9-x02" firstAttribute="top" secondItem="7rK-fT-t9G" secondAttribute="bottom" id="Jxe-he-mpk"/>
-                    <constraint firstItem="Ry2-wJ-FfO" firstAttribute="top" secondItem="adG-vZ-Sef" secondAttribute="bottom" constant="8" id="LWy-hD-xPr"/>
                     <constraint firstItem="7rK-fT-t9G" firstAttribute="leading" secondItem="Ry2-wJ-FfO" secondAttribute="trailing" constant="2" id="O0l-gO-4P9"/>
-                    <constraint firstItem="adG-vZ-Sef" firstAttribute="centerY" secondItem="aLK-2v-mHU" secondAttribute="centerY" id="Rxu-5S-APV"/>
                     <constraint firstItem="KC9-o9-x02" firstAttribute="leading" secondItem="9Js-NU-CqU" secondAttribute="leading" id="UDJ-B4-9l6"/>
                     <constraint firstAttribute="trailing" secondItem="7rK-fT-t9G" secondAttribute="trailing" id="UGq-4e-F3t"/>
                     <constraint firstItem="KC9-o9-x02" firstAttribute="top" secondItem="Ry2-wJ-FfO" secondAttribute="bottom" constant="10" id="aaE-Jh-pg6"/>
-                    <constraint firstItem="adG-vZ-Sef" firstAttribute="leading" secondItem="aLK-2v-mHU" secondAttribute="trailing" constant="3" id="afA-Kx-EdE"/>
-                    <constraint firstItem="aLK-2v-mHU" firstAttribute="top" secondItem="9Js-NU-CqU" secondAttribute="top" constant="10" id="d1i-Jf-oSV"/>
                     <constraint firstItem="Ry2-wJ-FfO" firstAttribute="leading" secondItem="9Js-NU-CqU" secondAttribute="leading" constant="8" id="r6l-Jf-iJM"/>
                     <constraint firstItem="Ry2-wJ-FfO" firstAttribute="top" secondItem="9Js-NU-CqU" secondAttribute="top" priority="700" constant="10" id="xFz-qa-wlu"/>
                     <constraint firstItem="7rK-fT-t9G" firstAttribute="top" secondItem="9Js-NU-CqU" secondAttribute="top" id="xZb-o1-fG1"/>
@@ -131,15 +111,14 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
+                <outlet property="callToActionLabel" destination="bas-BI-p7l" id="LVc-nG-oiP"/>
                 <outlet property="collectionView" destination="KC9-o9-x02" id="hRG-bJ-Jqd"/>
                 <outlet property="contextLabel" destination="MJw-rI-6rQ" id="cIg-b5-yU5"/>
                 <outlet property="flowLayout" destination="gI2-1t-GGm" id="yvc-My-Rsw"/>
-                <outlet property="invitedText" destination="adG-vZ-Sef" id="M8g-Hw-jj6"/>
-                <outlet property="inviterLabel" destination="aLK-2v-mHU" id="IQb-g4-NA7"/>
                 <outlet property="peopleExplanationLabel" destination="6Us-ce-ejk" id="4Q1-cd-j6a"/>
                 <outlet property="peopleLabel" destination="NPB-S6-YvY" id="9Qq-xE-lSl"/>
             </connections>
-            <point key="canvasLocation" x="17" y="254.5"/>
+            <point key="canvasLocation" x="8" y="274"/>
         </tableViewCell>
     </objects>
     <resources>
