--- a/strand/iOS/Strand/Strand/DFSelectPhotosInviteSectionFooter.xib
+++ b/strand/iOS/Strand/Strand/DFSelectPhotosInviteSectionFooter.xib
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rtI-ml-gsP">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rtI-ml-gsP" customClass="DFSelectPhotosInviteSectionFooter">
             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -24,6 +23,9 @@
                 <constraint firstItem="MYl-jo-s37" firstAttribute="leading" secondItem="rtI-ml-gsP" secondAttribute="leading" constant="8" id="w7h-rf-RAU"/>
                 <constraint firstAttribute="bottom" secondItem="MYl-jo-s37" secondAttribute="bottom" constant="8" id="zGR-CH-Pfo"/>
             </constraints>
+            <connections>
+                <outlet property="textLabel" destination="MYl-jo-s37" id="hVy-EZ-fbS"/>
+            </connections>
             <point key="canvasLocation" x="376" y="432"/>
         </collectionReusableView>
     </objects>
