--- a/strand/iOS/Strand/Strand/DFInboxViewController.xib
+++ b/strand/iOS/Strand/Strand/DFInboxViewController.xib
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFActivityFeedViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFInboxViewController">
             <connections>
                 <outlet property="tableView" destination="fAL-Vu-feB" id="ZyX-fc-RTs"/>
                 <outlet property="view" destination="fAL-Vu-feB" id="m0c-BS-xAQ"/>
